fix: jumpy slide buttons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,11 +66,7 @@ textarea {
 }
 
 .progress-bar {
-  @apply h-full w-full rounded-full opacity-100 transition-opacity duration-500;
-}
-
-.inactive {
-  @apply opacity-0;
+  @apply h-full w-full rounded-full;
 }
 
 .active .progress-bar {
